# zero2prod

./: .env  Cargo.toml  Dockerfile  Makefile  configuration.yaml  sqlx-data.json
.github/workflows/: general.yaml
configuration/: base.yaml  production.yaml
migrations/: 20221002104416_create_subscriptions_table.sql  20221010183757_make_status_not_null_in_subscriptions.sql  20221010184603_create_subscription_tokens_table.sql  20221020171335_create_users_table.sql  20221020183611_add_salt_to_users.sql  20221026171003_seed_user.sql  20221028195005_create_idempotency_table.sql  20221031191932_create_newsletter_issues_table.sql  20221031192509_create_issue_delivery_queue_table.sql
scripts/: drop_db.sh  init_db.sh  init_redis.sh
src/: .#issue_delivery_worker.rs  authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  mod.rs  persistence.rs
src/routes/: .#subscriptions.rs  health_check.rs  newsletter.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletter/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  newsletter.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
