[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "rt"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde-aux = "3"
config = "0.13"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-actix-web = "0.6"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1"
validator = "0.14"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rand = {version = "0.8", features= ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.13"
sha3 = "0.9"
argon2 = { version = "0.4", features = ["std"] }
urlencoding = "2"

[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
"runtime-tokio-rustls",
"macros",
"postgres",
"uuid",
"chrono",
"migrate",
"offline"
]


[dev-dependencies]
claim = "0.5.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
once_cell = "1.7.2"
wiremock = "0.5"
linkify = "0.8"
